<resources>
    <string name="app_name">NoteApp</string>
    <string name="create_sample_data">Create sample data</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="all_deleted">All notes deleted</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="new_note">New note</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="note_updated">Note updated</string>
    <string name="action_delete">Delete</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note">Note</string>
    <string name="enter_note_here">Enter text here</string>
    <string name="enter_phone_here">Enter phone here</string>
    <string name="name_field">Name</string>
    <string name="phone_field">Phone</string>
    <string name="date_of_birth_field">DOB</string>
    <string name="enter_date_here">Enter birth here</string>
    <string name="pet_type_field">Pet Type</string>
    <string name="gender_field">Gender</string>
    <string name="female_button">Female</string>
    <string name="male_button">Male</string>
    <string name="pet_vaccine">Pet vaccine</string>
    <string name="vaccine_checkbox">vaccineCheck</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="email_field">Email</string>
</resources>
