<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.keith.noteapp.EditActivity"
    tools:showIn="@layout/activity_edit">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_field"
        android:textSize="24dp"
        android:textColor="@color/primary_text"
        android:id="@+id/nameView"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/editPhone"
        android:layout_toStartOf="@+id/editText"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_note_here"
        android:textColorHint="@color/secondary_text_op"
        android:inputType="textMultiLine|textCapSentences"
        android:layout_alignStart="@+id/editPhone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_field"
        android:textSize="24dp"
        android:textColor="@color/primary_text"
        android:id="@+id/phoneView"
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/editPhone"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editPhone"
        android:layout_toStartOf="@+id/editPhone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editPhone"
        android:layout_below="@+id/editText"
        android:hint="@string/enter_phone_here"
        android:textColorHint="@color/secondary_text_op"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth_field"
        android:textSize="24dp"
        android:textColor="@color/primary_text"
        android:id="@+id/DOBView"
        android:layout_alignBottom="@+id/editDate"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editDate"
        android:gravity="center_vertical|center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDate"
        android:hint="@string/enter_date_here"
        android:textColorHint="@color/secondary_text_op"
        android:layout_below="@+id/editPhone"
        android:layout_marginTop="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/editPhone"
        android:inputType="date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_field"
        android:textSize="24dp"
        android:textColor="@color/primary_text"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/editEmail"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editEmail"
        android:layout_toStartOf="@+id/editEmail"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editEmail"
        android:textColorHint="@color/secondary_text_op"
        android:hint="@string/enter_email_here"
        android:layout_below="@+id/editDate"
        android:layout_alignStart="@+id/editDate"
        android:layout_alignEnd="@+id/editDate"
        android:layout_marginTop="32dp" />


</RelativeLayout>
